# pixeldojo-mcp-server

./: .gitignore  API_DOCUMENTATION.md  LICENSE  README.md  SETUP_GUIDE.md  WINDSURF_INTEGRATION.md  install_dev.sh  pixeldojo-mcp.rb  pyproject.toml
src/pixeldojo_mcp/: __init__.py  server.py  server.py.bak
