[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixeldojo-mcp"
dynamic = ["version"]
authors = [
    { name = "Marius Silenskis" },
]
description = "MCP integration for PixelDojo AI image generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "mcp", "image-generation", "pixeldojo"]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.2",
]

[project.scripts]
pixeldojo-mcp = "pixeldojo_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pixeldojo_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/pixeldojo_mcp/__init__.py"
